k8s/03-longhorn.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend-svc
  namespace: pihole
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: longhorn-frontend-svc
spec:
  selector:
    app: longhorn-frontend
  ports:
    - name: 80-tcp
      port: 80
      targetPort: 80
      protocol: TCP
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.1.22
