k8s/06-wireguard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wireguard
  labels:
    name: wireguard
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wireguard
  namespace: wireguard
  labels:
    app: wireguard
spec:
  serviceName: "wireguard"
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
      - name: wireguard
        image: ghcr.io/linuxserver/wireguard:v1.0.20210223-ls17
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - SYS_MODULE
          privileged: true
        volumeMounts:
          - name: wg-config
            mountPath: /config
          - name: host-volumes
            mountPath: /lib/modules
        ports:
        - containerPort: 51820
          protocol: UDP
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
        - name: wg-config
          persistentVolumeClaim:
            claimName: pvc-wireguard 
        - name: host-volumes
          hostPath:
            path: /lib/modules
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-svc
  namespace: wireguard
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: wireguard-svc
spec:
  selector:
    app: wireguard
  ports:
    - name: 51820-tcp
      port: 51820
      targetPort: 51820
      protocol: UDP
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.1.21
